# fitness-tracker

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .flake8  .gitignore  .korbit-policies.yaml  .readthedocs.yaml  404.html  DEFINITIONS.yml  Dockerfile  EXAMPLES.md  LICENSE  Pipfile  README.md  SECURITY.md  api-docs-fitness-tracker.html  codecov.yml  compose.yaml  config.json  config.yml  db.json  docker-compose.yaml  index.html  injuries-and-rehabilitation.html  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  training.py  training_log.json  training_log_2022-02-15.json  tsconfig.json  workout_programs.yml  yaml_schema.json
.config/: .editorconfig  .readthedocs.yaml  .spellcheck.yml  .wordlist.txt  Makefile  codecov.yml  config.yml  mkdocs-requirements.txt  ruff.toml  settings.processed.toml  settings.toml  yaml_schema.json
.github/: CONTRIBUTING.md  dependabot.yml
API-Schema/: openapi.yaml
CHANGELOG/: index.html
Kettlebell/: kettlebell.html
TODOs/: index.html
Workout-Programs/: chest.html  styles.css  workout-program-detail.yml  workout-programs-detail.html  workout_programs.html  workout_programs.yml
Yoga/: ashtanga.html  hatha.html  terminology.html  yin.html
architecture/: architecture.html
config/: .spellcheck.yml  .wordlist.txt
data/: 2021_workouts.yml  2022_workouts.yml  2023_workouts.yml  2024_workouts.yml  db.json  sim_db.json  simulated_training_log_2023-01-01.json
data_dictionaries/: data_dictionary.csv  data_dictionary.yml
details/: gyms.html  standards.html  standards.yml
dev-docs/: CHANGELOG.html  TODOs.html  known_issues.html
docs/: EXAMPLES.md  conf.py  data_dictionary.yml  injuries-and-rehabilitation.md
examples/: EXAMPLES.html  EXAMPLES.md  scan_docker_image_locally.html  svelte_frontend_setup.html  tech_docs.html  workout_sample_data.html  workout_sample_data.yml
exercises/: abs.yaml  back.yaml  muscles_and_exercises.yaml  muscles_and_exercises_weight_ranges.yaml  shoulders.yaml
features/: get_program.feature  lookup.feature  model.feature  validate.feature
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
gallery/: BREATH-HOLDING.html  FREQUENCY.html  STRENGTH.html  VOLUME.html  date-and-split.html  gallery.html
great_expectations/: great_expectations.yml
gyms/: index.html
injuries-and-rehabilitation/: index.html
known_issues/: index.html
oxygen/: setup.py
project_docs/: CODE_OF_CONDUCT.md  DEFINITIONS.yml  known_issues.md  workout_programs.yml
search/: search_index.json
simulations/: simulations.html
src/: 1rm.py  1rm.r  __init__.py  anatomy.js  anatomy.ts  anomaly_detection.py  flow.sh  insert.py  local_r_setup.txt  main.py  model.py  one_rep_max.py  one_rep_max_calc.py  one_rep_max_plot.py  openapi2html.py  plot.py  real_flow.sh  simulate_data.py  simulation_flow.sh  training.py  user_settings.py
standards/: index.html
stats/: get_all_durations.stats  get_all_durations_report.txt  get_workout_duration.prof  get_workout_duration.stats  get_workout_duration_report.txt  main.stats
tech_support/: macos_ventura_google_drive.md
test/: conftest.py  sample.json  test_anomaly_detection.py  test_db.json  test_get_exercises.py  test_get_program.py  test_get_workout_duration.py  test_get_year_and_week.py  test_google_sheet.py  test_insert.py  test_insert_legacy.py  test_json_to_csv.py  test_lookup.py  test_model.py  test_one_rep_max.py  (+9 more)
(+1716 files in other folders)
