[tool.poetry]
name = "fitness-tracker"
version = "0.0.1"
description = "Full stack fitness tracking application using TinyDB and FastAPI"
authors = ["Gustav Collin Rasmussen"]

[tool.poetry.dependencies]
athleteprofiler = "^0.1.1"
behave = "^1.2.6"
fastapi = "^0.103"
Faker = "^19.10"
flake8 = "^6.1"
matplotlib = "^3.8.0"
mypy = "^1.6"
numpy = "^1.26"
pandas = "^2.1"
pydantic = "^2.4"
python = ">=3.11,<3.13"
PyYAML = "^6.0.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.0.292"
seaborn = "^0.13"
Sphinx = "^7.2.6"
tinydb = "^4.8.0"
uvicorn = "^0.23.2"
watchfiles = "^0.21.0"
wily = "^1.25"
yamllint = "^1.32.0"
icecream = "^2.1.3"
scipy = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
