[tool.poetry]
name = "fitness-tracker"
version = "0.0.1"
description = "Full stack fitness tracking application using TinyDB and FastAPI"
authors = ["Gustav Rasmussen"]

[tool.poetry.dependencies]
behave = "^1.2.6"
fastapi = "^0.115.6"
matplotlib = "^3.10.0"
numpy = "2.2.0"
pandas = "^2.2.3"
pydantic = "^2.10.4"
python = "^3.11"
PyYAML = "^6.0.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
seaborn = "^0.13.2"
Sphinx = "^8.1.3"
tinydb = "^4.8.2"
uvicorn = "^0.23.2"
watchfiles = "^1.0.3"
wily = "^1.25"
yamllint = "^1.35.1"
icecream = "^2.1.3"
scipy = "^1.14.1"
google-api-python-client = "^2.156.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
gspread = "^6.1.4"
python-dotenv = "^1.0.1"
orjson = "^3.10.12"
athleteprofiler = "^0.1.1"
profiling-tools = "^0.0.10"
file-convertion-tools = "^0.0.16"
datetime-convertion-tools = "^0.0.14"
algo-library = "^0.0.6"

[tool.poetry.dev-dependencies]
ruff = "^0.8.4"
mypy = "^1.14.0"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
